[package]
edition = "2018"
authors = ["Dmitry Kuzmin <kuzmin.d@redbees.ru>"]
categories = [
    "embedded",
    "hardware-support",
    "no-std",
]
description = "Peripheral access API for STM32L1 series microcontrollers"
documentation = "https://docs.rs/stm32l1xx-hal"
keywords = [
    "arm",
    "cortex-m",
    "stm32l1xx",
    "hal",
]
license = "MIT/Apache-2.0"
name = "stm32l1xx-hal"
readme = "README.md"
repository = "https://github.com/dmkuzmin/stm32l1xx-hal"
version = "0.1.0"

[dependencies]
cortex-m = "0.6.2"
nb = "1.0.0"
stm32l1 = "0.11.0"
as-slice = "0.1.3"
generic-array = "0.14.3"

[dependencies.bare-metal]
# features = ["const-fn"]
version = "1.0.0"

[dependencies.cast]
default-features = false
version = "0.2.3"

[dependencies.embedded-hal]
# features = ["unproven"]
version = "1.0.0-alpha.1"

[dependencies.void]
default-features = false
version = "1.0.2"

[dependencies.stable_deref_trait]
default-features = false
version = "1.1"

[dev-dependencies]
cortex-m-rt = "0.6.12"
cortex-m-semihosting = "0.3.5"
panic-semihosting = "0.5.3"
cortex-m-rtfm = "0.5.3"

[features]
default = ["rt", "stm32l151"]
rt = ["stm32l1/rt"]
stm32l100 = ["stm32l1/stm32l100"]
stm32l151 = ["stm32l1/stm32l151"]
stm32l152 = ["stm32l1/stm32l151"]
stm32l162 = ["stm32l1/stm32l162"]

[profile.dev]
codegen-units = 1
incremental = false

[profile.release]
codegen-units = 1
debug = true
lto = true
